--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
+    "emittery": "^1.1.0",
     "esno": "^4.8.0",
     "fs-extra": "^11.2.0",
     "husky": "^9.1.7",
