--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,3 @@
 {
-  "recommendations": [
-    "vue.volar"
-    // "antfu.iconify",
-    // "antfu.unocss",
-    // "dbaeumer.vscode-eslint",
-    // "csstools.postcss"
-  ]
+  "recommendations": ["vue.volar"]
 }
