--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "azon-seeker",
   "displayName": "Azon Seeker",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "private": true,
   "description": "Starter modify by honestfox101",
   "scripts": {
@@ -12,6 +12,7 @@
     "dev:web": "vite",
     "dev:js": "npm run build:js -- --mode development",
     "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:background build:js",
+    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox run-s clear build:web build:prepare build:background build:js",
     "build:prepare": "esno scripts/prepare.ts",
     "build:background": "vite build --config vite.config.background.mts",
     "build:web": "vite build",
