--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "esno": "^4.8.0",
     "exceljs": "^4.4.0",
     "fs-extra": "^11.2.0",
+    "html-to-image": "^1.11.13",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "kolorist": "^1.8.0",
@@ -65,8 +66,8 @@
     "vue-demi": "^0.14.10",
     "vue-router": "^4.5.1",
     "web-ext": "^8.5.0",
-    "webext-bridge": "^6.0.1",
-    "webextension-polyfill": "^0.12.0"
+    "webextension-polyfill": "^0.12.0",
+    "webext-bridge": "link:webext-bridge"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
