Adjust firefox config

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "private": true,
   "description": "Starter modify by honestfox101",
   "scripts": {
-    "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
-    "dev-firefox": "npm run clear && cross-env NODE_ENV=development EXTENSION=firefox run-p dev:*",
+    "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:prepare dev:web dev:background dev:js",
+    "dev-firefox": "npm run clear-firefox && cross-env NODE_ENV=development EXTENSION=firefox run-p dev:prepare dev:web dev:background dev:js",
     "dev:prepare": "esno scripts/prepare.ts",
-    "dev:background": "npm run build:background -- --mode development",
     "dev:web": "vite",
+    "dev:background": "npm run build:background -- --mode development",
     "dev:js": "npm run build:js -- --mode development",
     "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:background build:js",
-    "build:firefox": "cross-env NODE_ENV=production EXTENSION=firefox run-s clear build:web build:prepare build:background build:js",
+    "build-firefox": "cross-env NODE_ENV=production EXTENSION=firefox run-s clear-firefox build:web build:prepare build:background build:js",
     "build:prepare": "esno scripts/prepare.ts",
     "build:background": "vite build --config vite.config.background.mts",
     "build:web": "vite build",
@@ -23,7 +23,8 @@
     "pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension --filename extension.xpi --overwrite-dest",
     "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
     "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
-    "clear": "rimraf --glob extension/dist extension/manifest.json extension.*",
+    "clear": "rimraf --glob extension/dist extension/manifest.json extension.* ",
+    "clear-firefox": "rimraf --glob extension-firefox/dist extension-firefox/manifest.json extension.*",
     "test": "vitest test",
     "typecheck": "tsc --noEmit",
     "prepare": "husky"
@@ -33,7 +34,7 @@
     "@iconify/json": "^2.2.293",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.10.5",
-    "@types/webextension-polyfill": "^0.12.1",
+    "@types/webextension-polyfill": "^0.12.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.2.0",
     "@vue/test-utils": "^2.4.6",
@@ -66,8 +67,8 @@
     "vue-demi": "^0.14.10",
     "vue-router": "^4.5.1",
     "web-ext": "^8.5.0",
-    "webextension-polyfill": "^0.12.0",
-    "webext-bridge": "link:webext-bridge"
+    "webext-bridge": "link:webext-bridge",
+    "webextension-polyfill": "^0.12.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
