--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ node_modules
 src/auto-imports.d.ts
 src/components.d.ts
 .eslintcache
+build/*
+!build/.gitkeep
 
 **/test_data.ts
 **/TestPanel.vue
