--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "*.css": "postcss"
   },
   "prettier.tabWidth": 2,
-  "prettier.printWidth": 100
+  "prettier.printWidth": 100,
+  "editor.tabSize": 2
 }
