--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "pack": "cross-env NODE_ENV=production run-p pack:*",
     "pack:zip": "rimraf extension.zip && jszip-cli add extension/* -o ./extension.zip",
     "pack:crx": "crx pack extension -o ./extension.crx",
-    "pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension --filename extension.xpi --overwrite-dest",
-    "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
-    "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
+    "pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension-firefox --filename extension.xpi --overwrite-dest",
+    "start:chromium": "web-ext run --source-dir ./extension --target=chromium --chromium-binary 'C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe'",
+    "start:firefox": "web-ext run --source-dir ./extension-firefox --target=firefox-desktop",
     "clear": "rimraf --glob extension/dist extension/manifest.json extension.* ",
     "clear-firefox": "rimraf --glob extension-firefox/dist extension-firefox/manifest.json extension.*",
     "test": "vitest test",
@@ -39,6 +39,7 @@
     "@vitejs/plugin-vue-jsx": "^4.2.0",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^12.3.0",
+    "alova": "^3.3.4",
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
@@ -66,7 +67,7 @@
     "vue": "^3.5.13",
     "vue-demi": "^0.14.10",
     "vue-router": "^4.5.1",
-    "web-ext": "^8.5.0",
+    "web-ext": "^8.8.0",
     "webext-bridge": "link:webext-bridge",
     "webextension-polyfill": "^0.12.0"
   },
