--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "build:background": "vite build --config vite.config.background.mts",
     "build:web": "vite build",
     "build:js": "vite build --config vite.config.content.mts",
-    "pack": "cross-env NODE_ENV=production run-p pack:*",
-    "pack:zip": "rimraf extension.zip && jszip-cli add extension/* -o ./extension.zip",
-    "pack:crx": "crx pack extension -o ./extension.crx",
-    "pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension-firefox --filename extension.xpi --overwrite-dest",
+    "pack:7z": "rimraf --glob ./build/*.7z && 7z a ./build/extension.7z extension/* && 7z a ./build/extension-firefox.7z extension-firefox/*",
     "start:chromium": "web-ext run --source-dir ./extension --target=chromium --chromium-binary 'C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe'",
     "start:firefox": "web-ext run --source-dir ./extension-firefox --target=firefox-desktop",
     "clear": "rimraf --glob extension/dist extension/manifest.json extension.* ",
@@ -30,19 +27,18 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@ffflorian/jszip-cli": "^3.8.2",
     "@iconify/json": "^2.2.293",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.14.0",
     "@types/webextension-polyfill": "^0.12.3",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.2.0",
+    "@types/gulp-terser": "^1.2.6",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^12.3.0",
     "alova": "^3.3.4",
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
-    "crx": "^5.0.1",
     "dayjs": "^1.11.13",
     "emittery": "^1.1.0",
     "esno": "^4.8.0",
@@ -62,7 +58,7 @@
     "unplugin-auto-import": "^19.1.2",
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.2.4",
+    "vite": "^7.0.2",
     "vitest": "^3.1.1",
     "vue": "^3.5.13",
     "vue-demi": "^0.14.10",
