--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "incremental": false,
+    "useDefineForClassFields": false, // Could **not** be true because of vue-router
     "target": "es2016",
     "jsx": "preserve",
     "jsxImportSource": "vue",
     "lib": ["DOM", "ESNext"],
     "baseUrl": ".",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "esnext",
+    "moduleResolution": "node10",
     "paths": {
       "~/*": ["src/*"]
     },
@@ -19,5 +20,6 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "exclude": ["dist", "node_modules"]
+  "references": [{ "path": "tsconfig.node.json" }],
+  "include": ["*.d.ts", "src/**/*"]
 }
