--- a/webext-bridge/package.json
+++ b/webext-bridge/package.json
@@ -22,7 +22,7 @@
   },
   "author": "Neek Sandhu <neek.sandhu@outlook.com>",
   "scripts": {
-    "build": "tsup src/index.ts src/background.ts src/content-script.ts src/devtools.ts src/options.ts src/popup.ts src/window.ts src/sidepanel.ts --format esm,cjs --dts",
+    "build": "tsup src/index.ts src/background.ts src/content-script.ts src/devtools.ts src/options.ts src/popup.ts src/window.ts src/sidepanel.ts --format esm --dts",
     "watch": "npm run build -- --watch",
     "release": "bumpp --commit --push --tag && npm run build && npm publish"
   },
@@ -99,21 +99,21 @@
   },
   "homepage": "https://github.com/zikaari/webext-bridge#readme",
   "dependencies": {
-    "@types/webextension-polyfill": "^0.8.3",
-    "nanoevents": "^6.0.2",
-    "serialize-error": "^9.0.0",
-    "tiny-uid": "^1.1.1",
-    "webextension-polyfill": "^0.9.0"
+    "@types/webextension-polyfill": "^0.12.3",
+    "nanoevents": "^9.1.0",
+    "serialize-error": "^12.0.0",
+    "tiny-uid": "^1.1.2",
+    "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.16.1",
-    "@types/node": "^17.0.16",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "bumpp": "^7.1.1",
-    "eslint": "^8.8.0",
-    "tsup": "^5.11.13",
-    "type-fest": "^2.11.1",
-    "typescript": "^4.5.5"
+    "@antfu/eslint-config": "^4.16.2",
+    "@types/node": "^22.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "bumpp": "^10.2.0",
+    "eslint": "^9.30.1",
+    "tsup": "^8.5.0",
+    "type-fest": "^4.41.0",
+    "typescript": "^5.8.3"
   }
 }
