--- a/package.json
+++ b/package.json
@@ -27,40 +27,40 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.293",
+    "@iconify/json": "^2.2.356",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.14.0",
-    "@types/webextension-polyfill": "^0.12.3",
     "@types/gulp-terser": "^1.2.6",
+    "@types/node": "^22.16.0",
+    "@types/webextension-polyfill": "^0.12.3",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/test-utils": "^2.4.6",
-    "@vueuse/core": "^12.3.0",
+    "@vueuse/core": "^12.8.2",
+    "@zumer/snapdom": "^1.8.0",
     "alova": "^3.3.4",
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
-    "emittery": "^1.1.0",
+    "emittery": "^1.2.0",
     "esno": "^4.8.0",
     "exceljs": "^4.4.0",
-    "fs-extra": "^11.2.0",
-    "html-to-image": "^1.11.13",
+    "fs-extra": "^11.3.0",
     "husky": "^9.1.7",
-    "jsdom": "^26.0.0",
+    "jsdom": "^26.1.0",
     "kolorist": "^1.8.0",
-    "lint-staged": "^15.5.0",
-    "naive-ui": "^2.41.0",
+    "lint-staged": "^16.1.2",
+    "naive-ui": "^2.42.0",
     "npm-run-all": "^4.1.5",
     "prettier": "3.5.3",
     "rimraf": "^6.0.1",
-    "sass-embedded": "^1.86.2",
-    "typescript": "^5.8.2",
-    "unplugin-auto-import": "^19.1.2",
+    "sass-embedded": "^1.89.2",
+    "typescript": "^5.8.3",
+    "unplugin-auto-import": "^19.3.0",
     "unplugin-icons": "^22.1.0",
-    "unplugin-vue-components": "^28.4.1",
+    "unplugin-vue-components": "^28.8.0",
     "vite": "^7.0.2",
-    "vitest": "^3.1.1",
-    "vue": "^3.5.13",
+    "vitest": "^3.2.4",
+    "vue": "^3.5.17",
     "vue-demi": "^0.14.10",
     "vue-router": "^4.5.1",
     "web-ext": "^8.8.0",
