--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "azon-seeker",
   "displayName": "Azon Seeker",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "description": "Starter modify by honestfox101",
   "scripts": {
@@ -45,6 +45,7 @@
     "esno": "^4.8.0",
     "exceljs": "^4.4.0",
     "fs-extra": "^11.3.0",
+    "github-markdown-css": "^5.8.1",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "kolorist": "^1.8.0",
@@ -59,6 +60,7 @@
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^28.8.0",
     "vite": "^7.0.2",
+    "vite-plugin-md": "^0.21.5",
     "vitest": "^3.2.4",
     "vue": "^3.5.17",
     "vue-demi": "^0.14.10",
