--- a/package.json
+++ b/package.json
@@ -27,16 +27,14 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.356",
+    "@iconify/json": "^2.2.359",
     "@types/fs-extra": "^11.0.4",
-    "@types/gulp-terser": "^1.2.6",
-    "@types/node": "^22.16.0",
+    "@types/node": "^22.16.4",
     "@types/webextension-polyfill": "^0.12.3",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
-    "@vue/test-utils": "^2.4.6",
-    "@vueuse/core": "^12.8.2",
-    "@zumer/snapdom": "^1.8.0",
+    "@vueuse/core": "^13.5.0",
+    "@zumer/snapdom": "^1.9.5",
     "alova": "^3.3.4",
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
@@ -50,17 +48,19 @@
     "jsdom": "^26.1.0",
     "kolorist": "^1.8.0",
     "lint-staged": "^16.1.2",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "naive-ui": "^2.42.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "3.5.3",
+    "prettier": "3.6.2",
     "rimraf": "^6.0.1",
     "sass-embedded": "^1.89.2",
     "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^28.8.0",
-    "vite": "^7.0.2",
-    "vite-plugin-md": "^0.21.5",
+    "unplugin-vue-markdown": "^29.1.0",
+    "vite": "^7.0.4",
     "vitest": "^3.2.4",
     "vue": "^3.5.17",
     "vue-demi": "^0.14.10",
