--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "incremental": false,
-    "useDefineForClassFields": false, // Could **not** be true because of vue-router
+    "useDefineForClassFields": false, // Could **not** be true because of the conflict between vue-router and sidepanel
     "target": "es2016",
     "jsx": "preserve",
     "jsxImportSource": "vue",
